--- a/src/main/resources/templates/Normal/base.html
+++ b/src/main/resources/templates/Normal/base.html
@@ -23,7 +23,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-uppercase">
               
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" th:href="@{/}" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" th:href="@{/user/index}" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"><span th:text="${user.name}"></span></a>
