--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+i<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
   <head>
     <!-- Required meta tags -->
